MenuBar multiple fixes : identical rendering (or at least very close) on FF3/FF2/Safari3+/IE7/Chrome/Opera9+ and correct on IE6
(fixing issue #4 (that was partly affecting all browsers in fact))

--- a/src/jplex/components/menubar/assets/menubar-ie6.css
+++ b/src/jplex/components/menubar/assets/menubar-ie6.css
@@ -20,7 +20,6 @@ div.menubar li.item-with-icon {
 
 div.menubar li.item-without-icon {
     padding: 0 4.5em 0 0.7em;
-    height: 1.5em;
     vertical-align: middle;
     white-space: nowrap !important;
     clear: both;
